added nyo section and working on visual

--- a/HLC.html
+++ b/HLC.html
@@ -286,7 +286,27 @@
 
             
         </div>
-
+    </section>
+    <section class="performances">
+        
+        <div>
+            <div class="balikBayan">
+                <p>BALIK-BAYAN</p>
+                <img src="../members/member2.jpg" alt="performance">
+            </div>
+            <button onclick="hideMusi()">Musica</button>
+            <div class="Musi" id="Musi" style="display: block;">       
+                <p>Himig ng Kaligtasan</p>
+                <img src="../members/musi.jpg" alt="performance">
+            </div>
+            <div class="CFO">
+                <p>EVangelical Music</p>
+                <img src="EVM.jpg" alt="performance">
+            </div>
+        </div>
+        <div>
+            <h1>OUR PERFORMANCES</h1>
+        </div>
 
     </section>
 
