fixing background image

--- a/HLC.html
+++ b/HLC.html
@@ -82,7 +82,7 @@
 
             <div class="profile">
                 <div class="image-wrap">
-                    <img class="member-image" src="/members/Uli.jpg" alt="">
+                    <img class="member-image" src="Uli.jpg" alt="">
                 </div>
                 <div>
                     <p class="member-name">
@@ -99,7 +99,7 @@
 
             <div class="profile">
                 <div class="image-wrap">
-                    <img class="member-image" src="/members/Uli.jpg" alt="">
+                    <img class="member-image" src="Uli.jpg" alt="">
                 </div>
                 <div>
                     <p class="member-name">
@@ -116,7 +116,7 @@
 
             <div class="profile">
                 <div class="image-wrap">
-                    <img class="member-image" src="/members/Uli.jpg" alt="">
+                    <img class="member-image" src="Uli.jpg" alt="">
                 </div>
                 <div>
                     <p class="member-name">
@@ -133,7 +133,7 @@
 
             <div class="profile">
                 <div class="image-wrap">
-                    <img class="member-image" src="/members/Uli.jpg" alt="">
+                    <img class="member-image" src="Uli.jpg" alt="">
                 </div>
                 <div>
                     <p class="member-name">
@@ -150,7 +150,7 @@
 
             <div class="profile">
                 <div class="image-wrap">
-                    <img class="member-image" src="/members/Uli.jpg" alt="">
+                    <img class="member-image" src="Uli.jpg" alt="">
                 </div>
                 <div>
                     <p class="member-name">
@@ -167,7 +167,7 @@
 
             <div class="profile">
                 <div class="image-wrap">
-                    <img class="member-image" src="/members/Uli.jpg" alt="">
+                    <img class="member-image" src="Uli.jpg" alt="">
                 </div>
                 <div>
                     <p class="member-name">
@@ -184,7 +184,7 @@
 
             <div class="profile">
                 <div class="image-wrap">
-                    <img class="member-image" src="/members/Uli.jpg" alt="">
+                    <img class="member-image" src="Uli.jpg" alt="">
                 </div>
                 <div>
                     <p class="member-name">
@@ -201,7 +201,7 @@
 
             <div class="profile">
                 <div class="image-wrap">
-                    <img class="member-image" src="/members/Uli.jpg" alt="">
+                    <img class="member-image" src="Uli.jpg" alt="">
                 </div>
                 <div>
                     <p class="member-name">
@@ -218,7 +218,7 @@
 
             <div class="profile">
                 <div class="image-wrap">
-                    <img class="member-image" src="/members/Uli.jpg" alt="">
+                    <img class="member-image" src="Uli.jpg" alt="">
                 </div>
                 <div>
                     <p class="member-name">
@@ -235,7 +235,7 @@
 
             <div class="profile">
                 <div class="image-wrap">
-                    <img class="member-image" src="/members/Uli.jpg" alt="">
+                    <img class="member-image" src="Uli.jpg" alt="">
                 </div>
                 <div>
                     <p class="member-name">
@@ -252,7 +252,7 @@
 
             <div class="profile">
                 <div class="image-wrap">
-                    <img class="member-image" src="/members/Uli.jpg" alt="">
+                    <img class="member-image" src="Uli.jpg" alt="">
                 </div>
                 <div>
                     <p class="member-name">
@@ -269,7 +269,7 @@
 
             <div class="profile">
                 <div class="image-wrap">
-                    <img class="member-image" src="/members/Uli.jpg" alt="">
+                    <img class="member-image" src="Uli.jpg" alt="">
                 </div>
                 <div>
                     <p class="member-name">
