updating visual of using javascript

--- a/HLC.html
+++ b/HLC.html
@@ -288,24 +288,38 @@
         </div>
     </section>
     <section class="performances">
+        <h1>OUR PERFORMANCES</h1>
+        <ul>
+            <li id="balik"><button onclick="hideChurch()">BALIK-BAYAN<button></li>
+            <li id="himig">Himig ng Kaligtasan</li>
+            <li id="evM">EVangelical Music</li>
+        </ul>
         
         <div>
-            <div class="balikBayan">
+            <section class="balikBayan" >
                 <p>BALIK-BAYAN</p>
                 <img src="../members/member2.jpg" alt="performance">
-            </div>
-            <button onclick="hideMusi()">Musica</button>
-            <div class="Musi" id="Musi" style="display: block;">       
+                <div>
+                    <h2>Balik-Bayan</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio provident temporibus dolor adipisci, ab illo tempora perspiciatis repellat ipsum cumque reiciendis esse eaque officia, et inventore vitae velit eveniet mollitia?</p>
+                </div>
+            </section>
+            <section class="Musi" >       
                 <p>Himig ng Kaligtasan</p>
                 <img src="../members/musi.jpg" alt="performance">
-            </div>
-            <div class="CFO">
+                <div>
+                    <h2>Himig ng Kaligtasan</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio provident temporibus dolor adipisci, ab illo tempora perspiciatis repellat ipsum cumque reiciendis esse eaque officia, et inventore vitae velit eveniet mollitia?</p>
+                </div>
+            </section>
+            <section id="church" style="display: block;">
                 <p>EVangelical Music</p>
                 <img src="EVM.jpg" alt="performance">
-            </div>
-        </div>
-        <div>
-            <h1>OUR PERFORMANCES</h1>
+                <div>
+                    <h2>EVangelical Music</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio provident temporibus dolor adipisci, ab illo tempora perspiciatis repellat ipsum cumque reiciendis esse eaque officia, et inventore vitae velit eveniet mollitia?</p>
+                </div>
+            </section>
         </div>
 
     </section>
