--- a/HLC.html
+++ b/HLC.html
@@ -66,9 +66,9 @@
             <ul class="carousel__list">
               <li class="carousel__item" data-pos="-2">1</li>
               <li class="carousel__item" data-pos="-1">2</li>
-              <li class="carousel__item" data-pos="0">3</li>
+              <li class="carousel__item" data-pos="0"><img src="Uli.jpg" disabled>3</li>
               <li class="carousel__item" data-pos="1">4</li>
-              <li class="carousel__item" data-pos="2">5</li>
+              <li class="carousel__item" data-pos="2">5</li>  
             </ul>
           </div>
             
