--- a/HLC.html
+++ b/HLC.html
@@ -152,7 +152,7 @@
         <div>
             <section class="balikBayan" id="bayan">
 
-                <img src="../members/member2.jpg" alt="performance">
+                <img src="member2.jpg" alt="performance">
                 <div>
                     <h2>Balik-Bayan</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio provident temporibus dolor adipisci, ab illo tempora perspiciatis repellat ipsum cumque reiciendis esse eaque officia, et inventore vitae velit eveniet mollitia?</p>
@@ -160,7 +160,7 @@
             </section>
             <section class="Musi hidden" id="musi" >       
                 
-                <img src="../members/musi.jpg" alt="performance">
+                <img src="musi.jpg" alt="performance">
                 <div>
                     <h2>Himig ng Kaligtasan</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio provident temporibus dolor adipisci, ab illo tempora perspiciatis repellat ipsum cumque reiciendis esse eaque officia, et inventore vitae velit eveniet mollitia?</p>
