--- a/HLC.html
+++ b/HLC.html
@@ -31,14 +31,14 @@
 
     <section class="section1">
         <div class="tagLine">
-        <h1 class="tag">“People of God Should Continue to Please Him”</h1>
+        <h1 class="tag" id="tag">“People of God Should Continue to Please Him”</h1>
         <button class="butt">About Us</button>
         </div>
     </section>
 
     <section class="about">
         <div class="con-about">
-            <div class="cont">
+            <div class="cont left">
             <h1>HLC</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum in quod recusandae libero, doloremque provident quos sit fuga ipsa corporis corrupti? Itaque, illo accusamus debitis expedita voluptas porro velit sed. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum in quod recusandae libero, doloremque provident quos sit fuga ipsa corporis corrupti? Itaque, illo accusamus debitis expedita voluptas porro velit sed. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum in quod recusandae libero, doloremque provident quos sit fuga ipsa corporis corrupti? Itaque, illo accusamus debitis expedita voluptas porro velit sed.</p>
             <br>
@@ -46,7 +46,7 @@
             <br>
             </div>
 
-            <img src="choir2.jpg" alt="HLC">
+            <img src="choir2.jpg" alt="HLC" class="abouthlc cont right">
         </div>
     </section>
     <section class="member">
@@ -144,7 +144,7 @@
     </section>
     <section class="performances">
         <h1>OUR PERFORMANCES</h1>
-        <ul>
+        <ul class="navii">
             <li id="balik">BALIK-BAYAN</li>
             <li id="himig">Himig ng Kaligtasan</li>
             <li id="evm">EVangelical Music</li>
@@ -175,6 +175,9 @@
             </section>
         </div>
 
+    </section>
+    <section class="gform">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfyyGwhIKZ8A4q5kHAgnrscSL-C-h8OqeM2jfe3uRCj6Sb47A/viewform?embedded=true" width="640" height="1166" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </section>
     
     <script src="script.js">
