--- a/HLC.html
+++ b/HLC.html
@@ -64,7 +64,6 @@
         <div class="member-title">
             <h1>INC Ambassadors of Faith, Love and Hope</h1>
         <h1 style="font-family:cursive; position: relative; top: -120px; color: gold; font-family: Style Script, cursive; font-weight: 400; font-size: normal; font-size: 100px;"> H. Lopez Blvd.</h1>
-            <h2>Members</h2>
         </div>
         <div class="container">
             <input type="text" id="search" placeholder="Search choir members..." class="search-bar">
@@ -149,7 +148,7 @@
             <li id="himig">Himig ng Kaligtasan</li>
             <li id="evm">EVangelical Music</li>
         </ul>
-        <div>
+        <div class="perf">
             <section class="balikBayan" id="bayan">
 
                 <img src="member2.jpg" alt="performance">
