fixing the performances view

--- a/HLC.html
+++ b/HLC.html
@@ -142,12 +142,14 @@
         </div>
     </section>
     <section class="performances">
+        <div class="Navi">
         <h1>OUR PERFORMANCES</h1>
         <ul class="navii">
             <li id="balik">BALIK-BAYAN</li>
             <li id="himig">Himig ng Kaligtasan</li>
-            <li id="evm">EVangelical Music</li>
+            <li id="evm">Musical EVangelical Music</li>
         </ul>
+        </div>
         <div class="perf">
             <section class="balikBayan" id="bayan">
 
@@ -168,7 +170,7 @@
             <section class="churchs hidden" id="church" >
                 <img src="EVM.jpg" alt="performance">
                 <div>
-                    <h2>EVangelical Music</h2>
+                    <h2>Musical EVangelical Mission</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio provident temporibus dolor adipisci, ab illo tempora perspiciatis repellat ipsum cumque reiciendis esse eaque officia, et inventore vitae velit eveniet mollitia?</p>
                 </div>
             </section>
