update the performance

--- a/HLC.html
+++ b/HLC.html
@@ -151,7 +151,7 @@
         </ul>
         </div>
         <div class="perf">
-            <section class="balikBayan" id="bayan">
+            <section class="balikBayan taas" id="bayan">
 
                 <img src="member2.jpg" alt="performance">
                 <div>
@@ -159,7 +159,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio provident temporibus dolor adipisci, ab illo tempora perspiciatis repellat ipsum cumque reiciendis esse eaque officia, et inventore vitae velit eveniet mollitia?</p>
                 </div>
             </section>
-            <section class="Musi hidden" id="musi" >       
+            <section class="Musi hidden taas" id="musi" >       
                 
                 <img src="musi.jpg" alt="performance">
                 <div>
@@ -167,7 +167,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio provident temporibus dolor adipisci, ab illo tempora perspiciatis repellat ipsum cumque reiciendis esse eaque officia, et inventore vitae velit eveniet mollitia?</p>
                 </div>
             </section>
-            <section class="churchs hidden" id="church" >
+            <section class="churchs hidden taas" id="church" >
                 <img src="EVM.jpg" alt="performance">
                 <div>
                     <h2>Musical EVangelical Mission</h2>
