--- a/HLC.html
+++ b/HLC.html
@@ -21,11 +21,12 @@
         <div class="logo">
             <img src="logo1.png" alt="HLC Logo">
         </div>
-        <nav>
+        <nav class="topnav" id="myTopnav">
             <a href="#">HOME</a>
             <a href="#">PERFORMANCES</a>
             <a href="#">ABOUT</a>
             <a href="#">CONTACT</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
         </nav>
     </header>
 
@@ -41,8 +42,7 @@
             <div class="cont left">
             <h1>HLC</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum in quod recusandae libero, doloremque provident quos sit fuga ipsa corporis corrupti? Itaque, illo accusamus debitis expedita voluptas porro velit sed. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum in quod recusandae libero, doloremque provident quos sit fuga ipsa corporis corrupti? Itaque, illo accusamus debitis expedita voluptas porro velit sed. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum in quod recusandae libero, doloremque provident quos sit fuga ipsa corporis corrupti? Itaque, illo accusamus debitis expedita voluptas porro velit sed.</p>
-            <br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum in quod recusandae libero, doloremque provident quos sit fuga ipsa corporis corrupti? Itaque, illo accusamus debitis expedita voluptas porro velit sed. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum in quod recusandae libero, doloremque provident quos sit fuga ipsa corporis corrupti? Itaque, illo accusamus debitis expedita voluptas porro velit sed. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum in quod recusandae libero, doloremque provident quos sit fuga ipsa corporis corrupti? Itaque, illo accusamus debitis expedita voluptas porro velit sed.</p>
+            
             <br>
             </div>
 
@@ -178,7 +178,7 @@
 
     </section>
     <section class="gform">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfyyGwhIKZ8A4q5kHAgnrscSL-C-h8OqeM2jfe3uRCj6Sb47A/viewform?embedded=true" width="640" height="1166" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfyyGwhIKZ8A4q5kHAgnrscSL-C-h8OqeM2jfe3uRCj6Sb47A/viewform?embedded=true" width="640" height="1334" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </section>
     
     <script src="script.js">
