--- a/HLC.html
+++ b/HLC.html
@@ -37,6 +37,7 @@
         </div>
     </section>
 
+
     <section class="about">
         <div class="con">
             <h1 class="autoShow">About AOFLAH HLC</h1>
@@ -75,17 +76,20 @@
             </div>
         </div>
     </section>
-    <section class="member">
-        <div class="member1">
+    <section class="conductor">
+        <div class="conductor-profile ">
             <img src="conductor.JPG" alt="HLC">
-            <h1>Conductor / Choirmaster</h1>
+            <h1>Conductor</h1>
+            <h2>Choir Master</h2>
         </div>
 
-        <div class="member11">
-            <h1>About Conductor</h1>
+        <div class="conductor-detail">
+            <h1 >About Conductor</h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut a vero asperiores dicta sequi? Molestias inventore aliquam sequi, ipsum, placeat recusandae molestiae obcaecati cupiditate reprehenderit ratione magni dolorem sed nam!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut a vero asperiores dicta sequi? Molestias inventore aliquam sequi, ipsum, placeat recusandae molestiae obcaecati cupiditate reprehenderit ratione magni dolorem sed nam!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut a vero asperiores dicta sequi? Molestias inventore aliquam sequi, ipsum, placeat recusandae molestiae obcaecati cupiditate reprehenderit ratione magni dolorem sed nam!</p>
         </div>
     </section>
+
+   
    <!-- <section class="member2">
         <div class="member-title">
             <h1>INC Ambassadors of Faith, Love and Hope</h1>
